Change authenticator to HTTP Bearer token
